@@ -1,4 +1,4 @@
-# TODO: modulationSpectrum - flip so am is in columns; check symmetry in modulationSpectrum when taking only the upper half; try quadratic interpolation from guessPhase_spsi in pitchAutocor etc; modulationSpectrum with inversed routine to filter a sound - eg remove roughness; rolloffNoiseExp around -6 dB/oct so flat after lipRad (Klatt & Klatt, 1990); add aspiration noise as an intrinsic part of source to be exactly the same length as the voiced segment (+play with noise spectrum to replace upper harmonics); AM aspiration noise with source if synthesizing with a closed phase (glottis > 0); check filter for really long vtl - too steep(?); test upsampling in pitchAutocor - maybe also lower the .975 threshold (optimize formally); soundgen() should accept smth like pitch = c(300, NA, 150, 250) and interpret this as two syllables with a pause - use eg as preview in manual pitch correction; morph() - tempEffects; streamline saving all plots a la ggsave: filename, path, different supported devices instead of only png(); automatic addition of pitch jumps at high temp in soundgen() (?); option to adjust the filter to be flat regardless of the number of formants (?)
+# TODO: try quadratic interpolation from guessPhase_spsi in pitchAutocor etc; modulationSpectrum with inversed routine to filter a sound - eg remove roughness; rolloffNoiseExp around -6 dB/oct so flat after lipRad (Klatt & Klatt, 1990); add aspiration noise as an intrinsic part of source to be exactly the same length as the voiced segment (+play with noise spectrum to replace upper harmonics); AM aspiration noise with source if synthesizing with a closed phase (glottis > 0); check filter for really long vtl - too steep(?); test upsampling in pitchAutocor - maybe also lower the .975 threshold (optimize formally); soundgen() should accept smth like pitch = c(300, NA, 150, 250) and interpret this as two syllables with a pause - use eg as preview in manual pitch correction; morph() - tempEffects; streamline saving all plots a la ggsave: filename, path, different supported devices instead of only png(); automatic addition of pitch jumps at high temp in soundgen() (?); option to adjust the filter to be flat regardless of the number of formants (?)
 
 # pitch_app: see a list of all uploaded files (add button - doing it with tooltips doesn't work); load audio + results to double-check old work
 
